[gd_scene load_steps=3 format=2]

[ext_resource path="res://panel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Node.gd" type="Script" id=2]

[node name="main" type="Node2D"]
script = ExtResource( 2 )

[node name="paneA" parent="." instance=ExtResource( 1 )]

[node name="Button_Pane_A_active" type="Button" parent="."]
margin_left = 256.0
margin_top = 8.0
margin_right = 293.0
margin_bottom = 48.0
text = "A ([)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="paneB" parent="." instance=ExtResource( 1 )]
position = Vector2( 512, 0 )

[node name="Button_Pane_B_active" type="Button" parent="."]
margin_left = 768.0
margin_top = 8.0
margin_right = 808.0
margin_bottom = 48.0
text = "B (])"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button_Pane_A_active" to="." method="_on_Button_Pane_A_active_pressed"]
[connection signal="pressed" from="Button_Pane_B_active" to="." method="_on_Button_Pane_B_active_pressed"]
